2010-10-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-find-fill-point): Don't leave blanks at the start of some
	lines.
	(shr-save-contents): New command and keystroke.

	* nndoc.el (nndoc-type-alist): Add git support.
	(nndoc-git-type-p): New function.
	(nndoc-transform-git-article): Ditto.
	(nndoc-transform-git-headers): Ditto.
	(nndoc-transform-git-headers): Generate Subject headers.

	* shr.el (shr-parse-style): New function.
	(shr-tag-span): Ditto.

	* nnmairix.el (nnmairix-summary-mode-hook): Move nnmairix's `$' command
	to `G G' to avoid collisions.

2010-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el: Load kinsoku if necessary.
	(shr-kinsoku-shorten): New internal variable.
	(shr-find-fill-point): Make kinsoku shorten text line if
	shr-kinsoku-shorten is bound to non-nil.
	(shr-tag-table): Bild shr-kinsoku-shorten to t; refer to
	shr-indentation too when testing if table is wider than frame width.
	(shr-insert-table): Use `string-width' instead of `length' to measure
	text width.
	(shr-insert-table-ruler): Make sure indentation is done at bol.

2010-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-request-move-article, nnimap-parse-line)
	(nnimap-process-expiry-targets): Use unibyte for buffers that hold
	undecoded network data.

2010-10-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-agent.el (gnus-agent-toggle-plugged): Use the right minor mode
	name in the mode line spec so that the mode line menu works
	(bug #2431).

	* message.el (message-get-reply-headers): If we're fed `to-address',
	then always use that.

	* gnus-art.el (gnus-article-make-menu-bar): The article/group menus
	aren't so wide as to need to switch off the edit menu.

	* gnus-delay.el (gnus-delay-article): Remove superfluous `group'
	binding.  Suggested by Leo <sdl.web@gmail.com> (bug #6613).

	* nnimap.el (nnimap-request-group): Don't SELECT the group twice on
	`M-g'.