@@ -1,3 +1,8 @@
+2010-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* shr.el (shr-find-fill-point): Shorten line if the preceding char is
+	kinsoku-eol regardless of shr-kinsoku-shorten.
+
 2010-10-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* shr.el (shr-find-fill-point): Don't leave blanks at the start of some
